--- a/slides/slides.html
+++ b/slides/slides.html
@@ -4,16 +4,9 @@
     <title>APIs: you’re probably not using them and why you probably should</title>
     <meta charset="utf-8" />
     <meta name="author" content="Katie Masiello" />
-    <script src="slides_files/header-attrs-2.11/header-attrs.js"></script>
+    <script src="slides_files/header-attrs-2.14/header-attrs.js"></script>
     <link href="slides_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="slides_files/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
-    <script src="slides_files/clipboard-2.0.6/clipboard.min.js"></script>
-    <link href="slides_files/shareon-1.4.1/shareon.min.css" rel="stylesheet" />
-    <script src="slides_files/shareon-1.4.1/shareon.min.js"></script>
-    <link href="slides_files/xaringanExtra-shareagain-0.2.3/shareagain.css" rel="stylesheet" />
-    <script src="slides_files/xaringanExtra-shareagain-0.2.3/shareagain.js"></script>
-    <link href="slides_files/panelset-0.2.3/panelset.css" rel="stylesheet" />
-    <script src="slides_files/panelset-0.2.3/panelset.js"></script>
     <link rel="stylesheet" href="custom2.css" type="text/css" />
     <link rel="stylesheet" href="cols.css" type="text/css" />
   </head>
@@ -360,7 +353,7 @@ sample(c("heads", "tails"), 1,
 ```
 
 ```
-## [1] "heads"
+## [1] "tails"
 ```
 --
 Yeah, it's a coin toss. Let's keep it simple. 😄
@@ -407,7 +400,7 @@ class: inverse
 
 ```
 
-## [1] "heads"
+## [1] "tails"
 
 ```
 
@@ -417,7 +410,7 @@ class: inverse
 
 ```
 
-## [1] "tails"
+## [1] "heads"
 
 ```
 
@@ -432,7 +425,7 @@ class: inverse
 
 ```
 
-## [1] "heads"
+## [1] "tails"
 
 ```
 
@@ -443,8 +436,8 @@ class: inverse
 ```
 
 ##    Var1 Freq
-## 1 heads  246
-## 2 tails  254
+## 1 heads  239
+## 2 tails  261
 
 ```
 
@@ -834,6 +827,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
